--- a/src/components/home-menu/styles.module.css
+++ b/src/components/home-menu/styles.module.css
@@ -3,15 +3,9 @@
   justify-content: space-between;
   padding: 19px 0;
 }
-.logoImg {
-  width: 40px;
-  height: 40px;
-  margin-right: 18px;
-}
-.logoBox {
-  flex-direction: row;
-  align-items: center;
-}
-.logoBox p{
-    font-size: 1.5rem;
+.box{
+  position: absolute;
+  width: 100%;
+  top: 0;
+  z-index: 100
 }
