--- a/src/styles/Layouts.module.css
+++ b/src/styles/Layouts.module.css
@@ -11,11 +11,11 @@
 .layoutLight {
   position: absolute;
   width: 550px;
-  height: 50vh;
+  height: 550px;
   left: calc(50% - 250px);
   top: 20vh;
   opacity: 0.5;
-  background: rgba(88, 100, 255, 0.5);
+  background: rgba(88, 100, 255, 0.9);
   filter: blur(550px);
   border-radius: 200px;
 }
@@ -37,5 +37,16 @@
   .il1,
   .il2 {
     display: none;
+  }
+}
+
+@media (max-width: 770px) {
+  .layoutLight {
+    width: 300px;
+    height: 300px;
+    filter: blur(175px);
+    background: rgba(88, 100, 255, 0.8);
+    top:300px;
+    left: calc(50% - 150px);
   }
 }
