--- a/src/components/card/styles.module.css
+++ b/src/components/card/styles.module.css
@@ -2,4 +2,14 @@
   width: 100%;
   padding: 25px 30px;
   background-color: rgba(60, 60, 60, 0.2);
+  z-index: 300;
+}
+.noContent{
+  margin-bottom: 30px;
+  letter-spacing: 1px;
+}
+@media (max-width: 800px) {
+  .noContent{
+    font-size: 0.87rem;
+  }
 }
