--- a/src/components/my-positions/styles.module.css
+++ b/src/components/my-positions/styles.module.css
@@ -41,6 +41,9 @@
   position: absolute;
   top: 80px;
 }
-.box2 img{
-    position: absolute;
+.box2 img {
+  position: absolute;
+}
+.box3 {
+  width: 118px;
 }
