--- a/src/components/alert/styles.module.css
+++ b/src/components/alert/styles.module.css
@@ -1,6 +1,6 @@
 .alertBox {
   background-color: #12131fe6;
-  flex-direction: row;
+  flex-direction: row!important;
   border-radius: 50px;
   align-items: center;
   position: fixed;
@@ -25,7 +25,7 @@
 @media (max-width: 800px) {
   .alertBox {
     width: 100%;
-    flex-direction: column;
+    flex-direction: column!important;
     border-radius: 0;
     padding: 20px;
     left: 0;
