--- a/src/components/logo/styles.module.css
+++ b/src/components/logo/styles.module.css
@@ -4,7 +4,7 @@
   margin-right: 18px;
 }
 .logoBox {
-  flex-direction: row;
+  flex-direction: row !important;
   align-items: center;
 }
 .logoBox p {
