--- a/src/components/mobile-menu/styles.module.css
+++ b/src/components/mobile-menu/styles.module.css
@@ -18,7 +18,7 @@
   border-radius: 50px;
 }
 .logoBox {
-  flex-direction: row;
+  flex-direction: row !important;
   justify-content: space-between;
   padding: 16px 23px 70px;
 }
