--- a/src/components/select-input/styles.module.css
+++ b/src/components/select-input/styles.module.css
@@ -2,7 +2,7 @@
   padding: 15px 20px;
 }
 .menuItem {
-  flex-direction: row;
+  flex-direction: row !important;
   align-items: center;
 }
 .menuItem img {
