--- a/src/components/supply-form/styles.module.css
+++ b/src/components/supply-form/styles.module.css
@@ -1,9 +1,9 @@
-.iconBox{
-    flex-direction: row;
-    justify-content: end;
-    align-items: center;
-    margin-bottom: 5px;
+.iconBox {
+  flex-direction: row !important;
+  justify-content: end;
+  align-items: center;
+  margin-bottom: 5px;
 }
-.iconBox img{
-    margin-right: 8px;
+.iconBox img {
+  margin-right: 8px;
 }
