--- a/src/components/mobile-menu/styles.module.css
+++ b/src/components/mobile-menu/styles.module.css
@@ -23,8 +23,8 @@
   padding: 16px 23px 70px;
 }
 .menuItem {
-  padding: 25px 0;
-  border: 1px solid rgba(60, 60, 60, 0.2);
+  padding: 25px 0 !important;
+  border: 1px solid rgba(60, 60, 60, 0.2) !important;
 }
 .menuItem p {
   text-align: center;
